apps/traefik/resources/middleware-default-headers.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: default-headers
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    customFrameOptionsValue: SAMEORIGIN
    customRequestHeaders:
      X-Forwarded-Proto: https
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
